Bug: light mode blinking before loading dark mode

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -16,12 +16,12 @@
 }
 
 html {
-	background-color: rgba(0, 0, 0, 0.5); // for test
 	width: 100%;
 	height: 100%;
 }
 
 body {
+	visibility: hidden;
 	height: 100%;
 	background-color: $white;
 
